Restructure test setup