@@ -17,6 +17,7 @@ dependencies {
     implementation "com.google.errorprone:error_prone_annotation:2.4.0"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
 }
 
@@ -34,10 +35,6 @@ java {
 
 test {
     useJUnitPlatform()
-    jvmArgs += [
-            '--add-exports=org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED',
-            '--add-exports=org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED'
-    ]
 }
 
 javafx {
